# matchstick-solver

./: CMakeLists.txt  LICENSE  Numeric Character.cpp  Numeric Character.hpp  main.cpp
src/: Character.cpp  Character.hpp  ConsoleOutput.cpp  ConsoleOutput.hpp  EqualityCharacter.hpp  Equation.cpp  Equation.hpp  ExpNodes.cpp  ExpNodes.hpp  Numeric Character.cpp  NumericCharacter.cpp  NumericCharacter.hpp  Operator.hpp  OperatorCharacter.cpp  OperatorCharacter.hpp  main.cpp
